<resources>
    <string name="application_label">FrostWire</string>
    <string name="activity_preferences_name">Settings</string>
    <string name="activity_browse_peer_name">Browse Host</string>
    <string name="activity_browse_peers_name">People Nearby</string>
    <string name="activity_chat_name">Chat</string>
    <string name="activity_downloads_name">Active Downloads</string>
    <string name="activity_uploads_name">Active Uploads</string>
    <string name="activity_about">About</string>
    <string name="activity_debug_name">Debug</string>
    <string name="disconnected">Disconnected</string>
    <string name="all_transfers_will_stop_are_you_sure">All transfers will stop.\nAre you sure?</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="wait">Wait</string>
    <string name="exit">Exit</string>
    <string name="no_wifi_want_to_fix_it_question">You\'re not connected to a Wi-Fi network.\n\nHow do you want to connect?</string>
    <string name="your_connection_has_dropped_stopping_services">Your Wi-Fi connection has dropped. Stopping services.</string>
    <string name="wifi_network_changed_restarting_services">The Wi-Fi network has changed. Restarting Services.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="leaving_already">Leaving Already?</string>
    <string name="search_label">Search</string>
    <string name="settings_description">Search Settings</string>
    <string name="clear_finished">Clear Finished</string>
    <string name="support_free_software">Support Free Software</string>
    <string name="show_love">Love FrostWire?</string>
    <string name="waiting">Waiting…</string>
    <string name="use_icons_to_browse">Use the icons to browse files.</string>
    <string name="type_to_filter_results">Type to filter results.</string>
    <string name="fetching_file_list">Fetching list of shared</string>
    <string name="not_sharing_files">is not sharing any files.</string>
    <string name="browse_peer">Browse Peer</string>
    <string name="peer">Peer</string>
    <string name="peers">Peers</string>
    <string name="copy">Copy</string>
    <string name="audio">Audio</string>
    <string name="audio_music">Audio/Music</string>
    <string name="video">Video</string>
    <string name="application">Application</string>
    <string name="applications">Apps</string>
    <string name="picture">Picture</string>
    <string name="pictures">Pictures</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtones">Ringtones</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="sharing">Sharing</string>
    <string name="send_pm">Send Private Message</string>
    <string name="me">Me</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="download_selected_files">Download Selected</string>
    <string name="toggle_sharing_selected_files">Toggle Sharing</string>
    <string name="change_manual_listening_port">Set Listening Port 1000 and 65535</string>
    <string name="is_not_responding">%s is not responding</string>
    <string name="max_concurrent_uploads">Maximum Simultaneous Uploads</string>
    <string name="search_no_keywords">Please enter search keywords</string>
    <string name="search_select_filetype">Please select a file type</string>
    <string name="searching_for">Searching for</string>
    <string name="search_for_type_files">Search for %s files</string>
    <string name="update_title">Update time!</string>
    <string name="update_message">FrostWire has downloaded a new PERFORMANCE UPDATE for you, please go ahead and touch the OK button if you want to install it now.</string>
    <string name="next_time">Next Time</string>
    <string name="change_my_nickname">Change my nickname</string>
    <string name="try_changing_your_nickname">Enter your nickname</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="go_to">Go To</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="send_to_third_party">Send/Upload</string>
    <string name="send_file_using">Send file using</string>
    <string name="my_files">My files</string>
    <string name="clear_messages">Clear messages</string>
    <string name="chat_actions">Chat Actions</string>
    <string name="preferences">Preferences</string>
    <string name="please_connect">Please connect to use this feature</string>
    <string name="remove">Remove</string>
    <string name="try_valid_port_next_time">Try a valid port next time 1000 and 65500</string>
    <string name="still_listening_on_port">Still listening on port</string>
    <string name="uh_still_listening_on_port">Uh? I\'m still listening on port</string>
    <string name="new_port_saved">New Port saved</string>
    <string name="now_on_port">Now on port</string>
    <string name="stop_all_transfers_message">This will cancel all ongoing and queued downloads. All transferred data will be lost. Are you sure?</string>
    <string name="files">files</string>
    <string name="touch_filetype_icon">Touch icon to change file type</string>
    <string name="tos_title">Terms of Use</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_refuse">Refuse</string>
    <string name="downloads">Downloads</string>
    <string name="minimize_frostwire">Minimize FrostWire</string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="failed_to_set_wallpaper">Failed to set Wallpaper</string>
    <string name="tell_others_chooser">Tweet / SMS / Email</string>
    <string name="tell_others_subject">Got FrostWire for Android yet?</string>
    <string name="and_choose_what_filetypes_to_share">Check what types of files you\'d like to enable for sharing on the FrostWire Mobile Network and nearby Wi-Fi enabled Desktops.</string>
    <string name="before_getting_started">Before you get started</string>
    <string name="sharing_preferences">Sharing Preferences</string>
    <string name="nickname">Nickname</string>
    <string name="how_other_users_will_see_you">How other users will see you</string>
    <string name="networking_preferences">Networking Preferences</string>
    <string name="simultaneous_uploads">Simultaneous Uploads</string>
    <string name="simultaneous_uploads_summary">Set how many uploads you want to allow at the same time.</string>
    <string name="other_settings">Other Settings</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_mobile_data">Use 3G/4G for BitTorrent</string>
    <string name="use_mobile_data_summary">Use mobile network for BitTorrent downloads. Data Overage charges may apply. Use carefully.</string>
    <string name="show_share_indication">Show Sharing Help</string>
    <string name="share_finished_downloads">Share finished downloads on Wi-Fi</string>
    <string name="share_finished_downloads_summary">Finished downloads will be available to other FrostWire users on your Wi-Fi network.</string>
    <string name="media_type_documents">Books/Docs</string>
    <string name="media_type_applications">Applications</string>
    <string name="media_type_audio">Audio</string>
    <string name="media_type_video">Video</string>
    <string name="media_type_images">Images</string>
    <string name="media_type_torrents">Torrents</string>
    <string name="search_settings">Search Settings</string>
    <string name="use_extratorrent">Use ExtraTorrent.com</string>
    <string name="use_mininova">Use Mininova.org</string>
    <string name="search">Search</string>
    <string name="torrent_settings">Torrent Settings</string>
    <string name="torrent_max_download_speed_summary">Max Download Speed</string>
    <string name="torrent_max_download_speed">Max Download Speed</string>
    <string name="torrent_max_upload_speed_summary">Max Upload Speed</string>
    <string name="torrent_max_upload_speed">Max Upload Speed</string>
    <string name="torrent_max_downloads_summary">Max Downloads</string>
    <string name="torrent_max_downloads">Max Downloads</string>
    <string name="torrent_max_uploads_summary">Max Uploads</string>
    <string name="torrent_max_uploads">Max Uploads</string>
    <string name="torrent_max_total_connections_summary">Max Total Connections</string>
    <string name="torrent_max_total_connections">Max Total Connections</string>
    <string name="empty_string"></string>
    <string name="seed_finished_torrents">Seed Finished Torrents</string>
    <string name="seed_finished_torrents_summary">Share pieces of torrent downloads with anybody on the internet via BitTorrent</string>
    <string name="seed_finished_torrents_wifi_only">Seed only on Wi-Fi</string>
    <string name="seed_finished_torrents_wifi_only_summary">Seeds only when connected via Wi-Fi to save bandwidth on your data plan</string>
    <string name="show_transers_on_download_start">Show Transfers On Download Start</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="clear">Clear</string>
    <string name="welcome_to_frostwire">Welcome to FrostWire</string>
    <string name="let_apos_s_set_you_up_before_we_begin_">Let\'s set you up before we begin.</string>
    <string name="how_others_see_you_on_the_local_network_wifi_">How others see you on the local network (Wi-Fi)</string>
    <string name="seeding_settings">Seeding Settings</string>
    <string name="seeding_settings_explanation">BitTorrent users on the internet will be able to download file chunks of the data your torrents seed.</string>
    <string name="seeding_wifi_settings_explanation">Seed only when using a Wi-Fi connection. Avoid extra charges from your carrier.</string>
    <string name="support_frostwire">Support FrostWire</string>
    <string name="support_frostwire_summary">Show ads to support the development of this app.</string>
    <string name="storage_preference_title">Select Storage Location</string>
    <string name="storage_preference_summary">The default storage location where files will be saved.</string>
    <string name="use_youtube">Use YouTube.com</string>
    <string name="use_soundcloud">Use Soundcloud.com</string>
    <string name="upnp_discovery">Wi-Fi Sharing</string>
    <string name="upnp_discovery_summary">Share files with peers on the local Wi-Fi network.</string>
    <string name="use_archiveorg">Use Archive.org</string>
    <string name="clear_search_cache">Clear search cache</string>
    <string name="clear_search_cache_summary">Clear search cache entries</string>
    <string name="one_dollar">$1</string>
    <string name="five_dollars">$5</string>
    <string name="ten_dollars">$10</string>
    <string name="twenty_five_dollars">$25</string>
    <string name="use_frostclick">Use FrostClick</string>
    <string name="anonymous_usage_statistics">Anonymous Usage Statistics</string>
    <string name="anonymous_usage_statistics_summary">Send anonymous usage statistics. No information regarding content searched, shared or played nor any information that can personally identify you will be stored on disk or sent through the network.</string>
    <string name="use_bitsnoop">Use BitSnoop</string>
    <string name="use_torlock">Use TorLock</string>
    <string name="use_eztv">Use Eztv</string>
    <string name="btc">BTC</string>
</resources>