<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2013, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/view_searchinput_menu_mediatype_audio"
        style="@style/MenuMediaType.Item.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/searchinput_menuitem_mediatype_background_horizontal_line_selector"
        android:drawableLeft="@drawable/browse_peer_audio_icon_selector_off"
        android:text="@string/media_type_audio" />

    <Button
        android:id="@+id/view_searchinput_menu_mediatype_video"
        style="@style/MenuMediaType.Item.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/searchinput_menuitem_mediatype_background_horizontal_line_selector"
        android:drawableLeft="@drawable/browse_peer_video_icon_selector_off"
        android:text="@string/media_type_video" />

    <Button
        android:id="@+id/view_searchinput_menu_mediatype_images"
        style="@style/MenuMediaType.Item.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/searchinput_menuitem_mediatype_background_horizontal_line_selector"
        android:drawableLeft="@drawable/browse_peer_picture_icon_selector_off"
        android:text="@string/media_type_images" />

    <Button
        android:id="@+id/view_searchinput_menu_mediatype_applications"
        style="@style/MenuMediaType.Item.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/searchinput_menuitem_mediatype_background_horizontal_line_selector"
        android:drawableLeft="@drawable/browse_peer_application_icon_selector_off"
        android:text="@string/media_type_applications" />

    <Button
        android:id="@+id/view_searchinput_menu_mediatype_documents"
        style="@style/MenuMediaType.Item.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/searchinput_menuitem_mediatype_background_horizontal_line_selector"
        android:drawableLeft="@drawable/browse_peer_document_icon_selector_off"
        android:text="@string/media_type_documents" />

    <Button
        android:id="@+id/view_searchinput_menu_mediatype_torrents"
        style="@style/MenuMediaType.Item.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/searchinput_menuitem_mediatype_background_selector"
        android:drawableLeft="@drawable/browse_peer_torrent_icon_selector_off"
        android:text="@string/media_type_torrents" />

</LinearLayout>